# data-cleaning-env

./: .gitignore  Dockerfile  README.md  clean_readme.py  inference.py  live_results.txt  live_test.py  openenv.yaml  pyproject.toml  quick_score.py  requirements.txt  transcript.txt  transcript_utf8.txt  uv_error.txt  validate_final.py
environment/: __init__.py  actions.py  env.py  models.py
environment/datasets/: __init__.py  generator.py
environment/graders/: __init__.py  graders.py
server/: app.py  main.py
