[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "Real-world AI Data Cleaning environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "openai>=1.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.25.0",
    "PyYAML>=6.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:run"

[project.optional-dependencies]

dev = [
    "pytest",
]
